--- a/src/index.css
+++ b/src/index.css
@@ -35,7 +35,8 @@ h1 {
   line-height: 1.1;
 }
 
-button {
+ {
+  /* button {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
@@ -45,9 +46,11 @@ button {
   background-color: #815353;
   cursor: pointer;
   transition: border-color 0.25s;
+} */
 }
+
 button:hover {
-  border-color: #646cff;
+  border-color: grey;
 }
 button:focus,
 button:focus-visible {
